kubernetes/overlays/playground/cron-webhook/ingress-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cron-webhook
  namespace: cron-webhook
spec:
  ingressClassName: traefik
  rules:
    - host: webhook.cronpilot.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cron-webhook
                port:
                  number: 4000
